feat: add new crud + frontend update
